# accesshub

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/api/: access.py  audit_log.py  auth.py  deps.py  groups.py  permissions.py  roles.py  users.py
app/core/: cache.py  config.py  db.py  security.py
app/models/: __init__.py  associations.py  audit_log.py  group.py  permission.py  role.py  user.py
app/schemas/: access.py  audit_log.py  group.py  permission.py  role.py  token.py  user.py
app/services/: audit.py  group_hierarchy.py  permission_cache.py  permissions.py  users.py
migrations/: env.py  script.py.mako
migrations/versions/: 78709f8c8a71_initial_schema.py
scripts/: entrypoint.sh  run_tests.sh  seed.py  seed_data.sh  wait-for-db.sh
tests/integration/: conftest.py  test_access.py  test_audit_log.py  test_auth.py  test_cache.py  test_groups.py  test_permissions.py  test_roles.py  test_users.py
tests/unit/: test_group_hierarchy.py  test_jwt.py  test_permission_matching.py  test_security.py
